--- a/META.yml
+++ b/META.yml
@@ -13,8 +13,18 @@ meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: '1.4'
 name: Alien-Librdkafka
+provides:
+  Alien::Librdkafka:
+    file: lib/Alien/Librdkafka.pm
+    version: v0.9.1
 requires:
   Alien::Base: '0.005'
   File::ShareDir: '1.00'
+resources:
+  bugtracker: https://github.com/trinitum/perl-Alien-Librdkafka/issues
+  homepage: https://github.com/trinitum/perl-Alien-Librdkafka
+  repository: git://github.com/trinitum/perl-Alien-Librdkafka
 version: v0.9.1
+x_contributors:
+  - 'Pavel Shaydo <zwon@cpan.org>'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
