--- a/META.yml
+++ b/META.yml
@@ -2,12 +2,13 @@
 abstract: 'build and install librdkafka'
 author:
   - unknown
-build_requires: {}
+build_requires:
+  IO::Socket::SSL: '0'
 configure_requires:
   Alien::Base::ModuleBuild: '0.005'
   Module::Build: '0.28'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4218, CPAN::Meta::Converter version 2.150005'
+generated_by: 'Module::Build version 0.422, CPAN::Meta::Converter version 2.150005'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
