--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,16 @@
 ---
 abstract: 'build and install librdkafka'
 author:
-  - unknown
+  - 'The current maintainer is Graham Ollis <plicease@cpan.org>'
 build_requires:
-  IO::Socket::SSL: '0'
+  IO::Socket::SSL: '1.56'
+  Net::SSLeay: '1.49'
+  Test2::V0: '0'
 configure_requires:
   Alien::Base::ModuleBuild: '0.005'
   Module::Build: '0.28'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.422, CPAN::Meta::Converter version 2.150005'
+generated_by: 'Module::Build version 0.4224, CPAN::Meta::Converter version 2.150010'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,15 +19,14 @@ name: Alien-Librdkafka
 provides:
   Alien::Librdkafka:
     file: lib/Alien/Librdkafka.pm
-    version: v0.11.6
+    version: '1.00'
 requires:
   Alien::Base: '0.005'
-  File::ShareDir: '1.00'
 resources:
-  bugtracker: https://github.com/trinitum/perl-Alien-Librdkafka/issues
-  homepage: https://github.com/trinitum/perl-Alien-Librdkafka
-  repository: git://github.com/trinitum/perl-Alien-Librdkafka
-version: v0.11.6
+  bugtracker: https://github.com/plicease/Alien-Librdkafka/issues
+  homepage: https://github.com/plicease/Alien-Librdkafka
+  repository: git://github.com/plicease/Alien-Librdkafka
+version: '1.00'
 x_contributors:
   - 'Pavel Shaydo <zwon@cpan.org>'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
