--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,9 @@ abstract: 'build and install librdkafka'
 author:
   - 'The current maintainer is Graham Ollis <plicease@cpan.org>'
 build_requires:
-  IO::Socket::SSL: '1.56'
-  Net::SSLeay: '1.49'
   Test2::V0: '0'
 configure_requires:
-  Alien::Base::ModuleBuild: '0.005'
+  Alien::Base::ModuleBuild: '1.00'
   Module::Build: '0.28'
 dynamic_config: 1
 generated_by: 'Module::Build version 0.4224, CPAN::Meta::Converter version 2.150010'
@@ -19,14 +17,15 @@ name: Alien-Librdkafka
 provides:
   Alien::Librdkafka:
     file: lib/Alien/Librdkafka.pm
-    version: '1.00'
+    version: '1.01'
 requires:
-  Alien::Base: '0.005'
+  Alien::Base: '1.52'
+  parent: '0'
 resources:
   bugtracker: https://github.com/plicease/Alien-Librdkafka/issues
   homepage: https://github.com/plicease/Alien-Librdkafka
   repository: git://github.com/plicease/Alien-Librdkafka
-version: '1.00'
+version: '1.01'
 x_contributors:
   - 'Pavel Shaydo <zwon@cpan.org>'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
