--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,11 @@ author           = Pavel Shaydo
 license          = Perl_5
 copyright_holder = Pavel Shaydo
 copyright_year   = 2016, 2017, 2018
-version          = 1.02
+version          = 1.03_01
 
 [AlienBase::Doc]
-name = librdkafka
+:version = 0.30
+name     = librdkafka
 
 [@Author::Plicease]
 :version      = 2.44
@@ -22,3 +23,7 @@ test2_v0      = 1
 [Author::Plicease::Thanks]
 current = Graham Ollis <plicease@cpan.org>
 original = Pavel Shaydo
+
+[Author::Plicease::Upload]
+cpan = 1
+
