need vcpkg plugin

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,8 @@ copyright_holder = Pavel Shaydo
 copyright_year   = 2016, 2017, 2018
 version          = 1.03_01
 
+; authordep Alien::Build::Plugin::Probe::Vcpkg
+
 [AlienBase::Doc]
 :version = 0.30
 name     = librdkafka
