--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,7 @@ name     = librdkafka
 [@Author::Plicease]
 :version      = 2.44
 travis_status = 1
+travis_com    = 1
 release_tests = 1
 irc           = irc://irc.perl.org/#native
 test2_v0      = 1
