--- a/dist.ini
+++ b/dist.ini
@@ -14,11 +14,12 @@ name     = librdkafka
 
 [@Author::Plicease]
 :version      = 2.44
-travis_status = 1
-travis_com    = 1
 release_tests = 1
 irc           = irc://irc.perl.org/#native
 test2_v0      = 1
+github_user   = uperl
+
+workflow = linux
 
 [AlienBuild]
 :version = 0.11
