--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -24,8 +24,8 @@ jobs:
       matrix:
         alien:
           - install_type: share
-          - install_type: system
-            packages: librdkafka
+#          - install_type: system
+#            packages: librdkafka
 
     env:
       ALIEN_INSTALL_TYPE: ${{ matrix.alien.install_type }}
